--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,7 @@
 
 
                     <Button
+                        android:id="@+id/btn_auth"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_margin="20dp"
