--- a/app/src/main/res/layout/author.xml
+++ b/app/src/main/res/layout/author.xml
@@ -5,17 +5,34 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardElevation="10dp"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardElevation="10dp">
 
-    <TextView
-        android:id="@+id/tv_author"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#1976D2"
-        android:padding="10dp"
-        android:textColor="#ffffff"
-        android:textSize="15sp" />
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_author"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#1976D2"
+            android:padding="10dp"
+            android:textColor="#ffffff"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/tv_count"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:background="@drawable/number_circle"
+            android:gravity="end"
+            android:padding="10dp"
+            android:textColor="#ffffff"
+            android:textSize="15sp" />
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
