--- a/app/src/main/res/drawable/number_circle.xml
+++ b/app/src/main/res/drawable/number_circle.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#1976D2" />
-        </shape>
-    </item>
-    <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="oval">
-            <solid android:color="#1bd4f6" />
+            <solid android:color="#A3F7B5" />
+            <size
+                android:width="10dp"
+                android:height="10dp" />
         </shape>
     </item>
 </layer-list>
