--- a/app/src/main/res/layout/author.xml
+++ b/app/src/main/res/layout/author.xml
@@ -5,6 +5,8 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     card_view:cardElevation="10dp">
 
     <LinearLayout
@@ -22,16 +24,33 @@
             android:textColor="#ffffff"
             android:textSize="15sp" />
 
-        <TextView
-            android:id="@+id/tv_count"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:background="@drawable/number_circle"
-            android:gravity="end"
-            android:padding="10dp"
-            android:textColor="#ffffff"
-            android:textSize="15sp" />
+            android:layout_weight="4">
+
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#1976D2"
+                android:contentDescription="@string/number_count"
+                android:padding="5dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/number_circle" />
+
+            <TextView
+                android:id="@+id/tv_count"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="A"
+                android:textColor="#000000"
+                android:textSize="15sp" />
+
+
+        </RelativeLayout>
 
     </LinearLayout>
 
