--- a/app/src/main/res/layout/quote.xml
+++ b/app/src/main/res/layout/quote.xml
@@ -5,6 +5,8 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     card_view:cardElevation="10dp"
     card_view:cardUseCompatPadding="true">
 
