--- a/app/src/main/res/layout/fragment_author.xml
+++ b/app/src/main/res/layout/fragment_author.xml
@@ -7,7 +7,7 @@
         android:id="@+id/author_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#A3F7B5"
+        android:background="@color/lightColor"
         android:scrollbars="vertical" />
 
 </RelativeLayout>
