--- a/app/src/main/res/layout/fragment_quote_wall.xml
+++ b/app/src/main/res/layout/fragment_quote_wall.xml
@@ -1,4 +1,5 @@
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swipe_refresh_layout"
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
@@ -8,26 +9,23 @@
         android:layout_height="match_parent"
         android:padding="5dp">
 
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#A3F7B5"
+            android:background="@color/lightColor"
             android:scrollbars="vertical" />
 
-
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/recycler_view"
             android:layout_alignEnd="@id/recycler_view"
             android:layout_alignRight="@id/recycler_view"
             android:layout_margin="16dp"
-            android:src="@drawable/app_icon" />
-
-
+            android:src="@drawable/app_icon"
+            app:elevation="10dp" />
     </RelativeLayout>
-
 
 </android.support.v4.widget.SwipeRefreshLayout>
