--- a/app/src/main/res/drawable/number_circle.xml
+++ b/app/src/main/res/drawable/number_circle.xml
@@ -3,7 +3,7 @@
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="oval">
-            <solid android:color="#A3F7B5" />
+            <solid android:color="@color/lightColor" />
             <size
                 android:width="10dp"
                 android:height="10dp" />
