--- a/app/src/main/res/layout/quote.xml
+++ b/app/src/main/res/layout/quote.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#1976D2"
+        android:background="@color/darkColor"
         android:padding="10dp"
         android:textColor="#ffffff"
         android:textSize="15sp" />
