--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,7 +7,7 @@
 
     <style name="MyButton" parent="Theme.AppCompat.Light">
         <item name="android:colorControlHighlight">#40C9A2</item>
-        <item name="android:colorButtonNormal">#A3F7B5</item>
+        <item name="android:colorButtonNormal">@color/lightColor</item>
     </style>
 
 
