--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -3,6 +3,8 @@
 
     <item
         android:id="@+id/action_search"
+        android:icon="@drawable/ic_action_search"
+        android:iconifiedByDefault="true"
         android:title="@string/action_search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always" />
