--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/myfrag"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+    android:layout_height="match_parent"
+    android:background="@color/primary_light">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -12,16 +14,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="80dp">
+            android:paddingTop="50dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:background="@drawable/text_banner"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/tv_filter_title"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/primary_text"
+                android:textColorHint="@color/accent"
                 android:textSize="50sp" />
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -33,12 +39,10 @@
                 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="match_parent"
-                    android:layout_height="220dp"
+                    android:layout_height="200dp"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal"
                     android:paddingBottom="@dimen/activity_vertical_margin"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:paddingRight="@dimen/activity_horizontal_margin"
                     android:paddingTop="@dimen/activity_vertical_margin">
 
 
@@ -48,6 +52,8 @@
                         android:layout_margin="20dp"
                         android:layout_weight="1"
                         android:text="@string/btn_topic"
+                        android:textColor="@color/icons"
+                        android:textSize="20sp"
                         android:theme="@style/MyButton" />
 
 
@@ -58,6 +64,8 @@
                         android:layout_margin="20dp"
                         android:layout_weight="1"
                         android:text="@string/btn_author"
+                        android:textColor="@color/icons"
+                        android:textSize="20sp"
                         android:theme="@style/MyButton" />
 
 
@@ -68,11 +76,11 @@
                     android:id="@+id/btn_wall"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="100dp"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginTop="0dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:text="@string/btn_quote_wall"
+                    android:textColor="@color/icons"
+                    android:textSize="20sp"
                     android:theme="@style/MyButton.Wall" />
 
             </LinearLayout>
