--- a/app/src/main/res/layout/author.xml
+++ b/app/src/main/res/layout/author.xml
@@ -19,9 +19,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/darkColor"
+            android:background="@color/primary"
             android:padding="10dp"
-            android:textColor="#ffffff"
+            android:textColor="@android:color/white"
             android:textSize="15sp" />
 
         <RelativeLayout
@@ -33,7 +33,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/darkColor"
+                android:background="@color/primary"
                 android:contentDescription="@string/number_count"
                 android:padding="5dp"
                 android:scaleType="fitCenter"
@@ -46,7 +46,7 @@
                 android:gravity="center"
                 android:padding="10dp"
                 android:text="A"
-                android:textColor="#000000"
+                android:textColor="@android:color/black"
                 android:textSize="15sp" />
 
 
