--- a/app/src/main/res/layout/fragment_author.xml
+++ b/app/src/main/res/layout/fragment_author.xml
@@ -1,13 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="1dp">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/author_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/lightColor"
+        android:background="@color/primary_light"
         android:scrollbars="vertical" />
 
 </RelativeLayout>
