--- a/app/src/main/res/layout/fragment_quote_wall.xml
+++ b/app/src/main/res/layout/fragment_quote_wall.xml
@@ -6,15 +6,14 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="5dp">
+        android:layout_height="match_parent">
 
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/lightColor"
+            android:background="@color/primary_light"
             android:scrollbars="vertical" />
 
 
