--- a/app/src/main/res/layout/quote.xml
+++ b/app/src/main/res/layout/quote.xml
@@ -15,9 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/darkColor"
+        android:background="@color/primary"
         android:padding="10dp"
-        android:textColor="#ffffff"
+        android:textColor="@android:color/white"
         android:textSize="15sp" />
 
 </android.support.v7.widget.CardView>
