--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,23 +5,23 @@
     <style name="AppTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <!-- colorPrimary is used for the default_realm action bar background -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/primary</item>
         <!-- colorPrimaryDark is used for the status bar -->
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
         <!-- colorAccent is used as the default_realm value for colorControlActivated
              which is used to tint widgets -->
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/accent</item>
         <!-- You can also set colorControlNormal, colorControlActivated
              colorControlHighlight & colorSwitchThumbNormal. -->
     </style>
 
     <style name="MyButton" parent="Theme.AppCompat.Light">
-        <item name="colorControlHighlight">#40C9A2</item>
-        <item name="colorButtonNormal">@color/lightColor</item>
+        <item name="colorControlHighlight">@color/primary_dark</item>
+        <item name="colorButtonNormal">@color/primary</item>
     </style>
 
     <style name="NumberPickerTextColorStyle">
-        <item name="android:textColorPrimary">@color/lightColor</item>
+        <item name="android:textColorPrimary">@color/primary</item>
     </style>
 
 </resources>
