--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/myfrag"
     android:layout_width="match_parent"
-
     android:layout_height="match_parent"
     android:background="@color/primary_light">
 
@@ -45,8 +44,8 @@
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     android:paddingTop="@dimen/activity_vertical_margin">
 
-
                     <Button
+                        android:id="@+id/btn_topic"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_margin="20dp"
@@ -55,7 +54,6 @@
                         android:textColor="@color/icons"
                         android:textSize="20sp"
                         android:theme="@style/MyButton" />
-
 
                     <Button
                         android:id="@+id/btn_auth"
@@ -71,7 +69,6 @@
 
                 </LinearLayout>
 
-
                 <Button
                     android:id="@+id/btn_wall"
                     android:layout_width="match_parent"
@@ -81,10 +78,9 @@
                     android:text="@string/btn_quote_wall"
                     android:textColor="@color/icons"
                     android:textSize="20sp"
-                    android:theme="@style/MyButton.Wall" />
+                    android:theme="@style/MyButton" />
 
             </LinearLayout>
-
 
         </LinearLayout>
 
