--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
                 android:background="@drawable/text_banner"
                 android:gravity="center_horizontal|center_vertical"
@@ -30,55 +30,101 @@
                 android:textSize="50sp" />
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                style="?android:attr/buttonBarStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="50dp"
+                android:baselineAligned="false"
+                android:minHeight="100dp"
+                android:orientation="horizontal"
+                android:weightSum="3">
 
-                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    style="?android:attr/buttonBarStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:gravity="center_horizontal"
-                    android:orientation="horizontal"
-                    android:paddingBottom="@dimen/activity_vertical_margin"
-                    android:paddingTop="@dimen/activity_vertical_margin">
-
-                    <Button
-                        android:id="@+id/btn_topic"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_margin="20dp"
-                        android:layout_weight="1"
-                        android:text="@string/btn_topic"
-                        android:textColor="@color/icons"
-                        android:textSize="20sp"
-                        android:theme="@style/MyButton" />
-
-                    <Button
-                        android:id="@+id/btn_auth"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_margin="20dp"
-                        android:layout_weight="1"
-                        android:text="@string/btn_author"
-                        android:textColor="@color/icons"
-                        android:textSize="20sp"
-                        android:theme="@style/MyButton" />
-
-
-                </LinearLayout>
-
-                <Button
-                    android:id="@+id/btn_wall"
-                    android:layout_width="match_parent"
+                <FrameLayout
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:text="@string/btn_quote_wall"
-                    android:textColor="@color/icons"
-                    android:textSize="20sp"
-                    android:theme="@style/MyButton" />
+                    android:layout_weight="1">
+
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@color/accent"
+                        android:contentDescription="@string/backup" />
+
+                    <ImageButton
+                        android:id="@+id/btn_topic"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@color/accent"
+                        android:contentDescription="@string/btn_topic"
+                        android:text="@string/btn_topic"
+                        android:textColor="@color/icons" />
+
+
+                </FrameLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@color/accent"
+                        android:contentDescription="@string/backup" />
+
+                    <ImageButton
+                        android:id="@+id/btn_auth"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@color/accent"
+                        android:contentDescription="@string/btn_author"
+                        android:text="@string/btn_author"
+                        android:textColor="@color/icons" />
+
+
+                </RelativeLayout>
+
+
+                <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@color/accent"
+                        android:contentDescription="@string/backup" />
+
+                    <ImageButton
+                        android:id="@+id/btn_wall"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@color/accent"
+                        android:contentDescription="@string/btn_quote_wall"
+                        android:text="@string/btn_quote_wall"
+                        android:textColor="@color/icons" />
+
+
+                </FrameLayout>
+
 
             </LinearLayout>
 
