--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/myfrag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/background_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -16,6 +17,7 @@
             android:paddingTop="50dp">
 
             <TextView
+                android:id="@+id/tv_quote"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
@@ -28,26 +30,31 @@
                 android:textSize="50sp" />
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/ll_buttons"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="170dp"
+                android:layout_below="@id/tv_quote"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="50dp"
-                android:baselineAligned="false"
-                android:minHeight="100dp"
                 android:orientation="horizontal">
 
-                <FrameLayout
+
+                <android.support.v7.widget.CardView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:cardBackgroundColor="@color/accent"
+                    app:cardElevation="5dp"
+                    app:cardUseCompatPadding="true">
+
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/accent"
+                        android:layout_marginTop="100dp"
                         android:fontFamily="sans-serif-black"
                         android:gravity="center_horizontal|bottom"
                         android:text="@string/topic"
@@ -56,29 +63,40 @@
                         android:textSize="50sp"
                         android:textStyle="italic" />
 
-                    <ImageButton
+                    <ImageView
+                        android:id="@+id/iv_topic"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="50dp"
+                        android:contentDescription="@string/btn_topic"
+                        android:padding="1dp" />
+
+                    <Button
                         android:id="@+id/btn_topic"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/accent"
-                        android:contentDescription="@string/btn_topic"
-                        android:text="@string/btn_topic"
+                        android:background="@android:color/transparent" />
 
-                        android:textColor="@color/icons" />
+                </android.support.v7.widget.CardView>
 
+                <Space
+                    android:layout_width="30dp"
+                    android:layout_height="match_parent" />
 
-                </FrameLayout>
-
-                <FrameLayout
+                <android.support.v7.widget.CardView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
-
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:cardBackgroundColor="@color/accent"
+                    app:cardElevation="5dp"
+                    app:cardUseCompatPadding="true">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/accent"
+                        android:layout_marginTop="100dp"
                         android:fontFamily="sans-serif-black"
                         android:gravity="center_horizontal|bottom"
                         android:text="@string/author"
@@ -87,45 +105,69 @@
                         android:textSize="50sp"
                         android:textStyle="italic" />
 
-                    <ImageButton
-                        android:id="@+id/btn_auth"
+                    <ImageView
+                        android:id="@+id/iv_author"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/accent"
-                        android:contentDescription="@string/btn_author"
-                        android:text="@string/btn_author"
-                        android:textColor="@color/icons" />
+                        android:layout_marginBottom="50dp"
+                        android:contentDescription="@string/btn_topic"
+                        android:padding="1dp" />
 
-                </FrameLayout>
+                    <Button
+                        android:id="@+id/btn_author"
+                        style="@style/MyButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent" />
+
+                </android.support.v7.widget.CardView>
 
             </LinearLayout>
 
-            <FrameLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="100dp"
+                android:layout_below="@id/ll_buttons"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="50dp"
-                android:minHeight="100dp">
+                android:background="@color/accent"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardBackgroundColor="@color/accent"
+                app:cardElevation="5dp"
+                app:cardUseCompatPadding="true">
+
 
                 <ImageView
+                    android:id="@+id/iv_wall"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/accent"
-                    android:contentDescription="@string/backup" />
+                    android:contentDescription="@string/btn_topic" />
 
-                <ImageButton
-                    android:id="@+id/btn_wall"
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/accent"
-                    android:contentDescription="@string/btn_quote_wall"
+                    android:fontFamily="sans-serif-black"
+                    android:gravity="center_horizontal|bottom"
                     android:text="@string/btn_quote_wall"
-                    android:textColor="@color/icons" />
+                    android:textAllCaps="false"
+                    android:textColor="@color/primary_dark"
+                    android:textSize="50sp"
+                    android:textStyle="italic" />
 
-            </FrameLayout>
 
-        </LinearLayout>
+                <Button
+                    android:id="@+id/btn_wall"
+                    style="@style/MyButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent" />
+
+            </android.support.v7.widget.CardView>
+
+
+        </RelativeLayout>
 
     </ScrollView>
 
