Added search to Author view Fixed main activity UI

--- a/app/src/main/res/layout/number_picker.xml
+++ b/app/src/main/res/layout/number_picker.xml
@@ -25,7 +25,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
-        android:background="@color/primary_light"
+        android:background="@color/primary"
         android:padding="10dp"
         android:text="Start Pushing"
         android:textColor="@android:color/black"
