--- a/app/src/main/res/drawable/popup_frame.xml
+++ b/app/src/main/res/drawable/popup_frame.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="2dp"
-        android:color="@color/primary_light" />
+        android:color="@color/light" />
     <corners android:radius="2dp" />
     <solid android:color="@color/primary" />
 </shape>
