--- a/app/src/main/res/drawable/text_banner.xml
+++ b/app/src/main/res/drawable/text_banner.xml
@@ -3,9 +3,8 @@
     android:shape="rectangle">
 
     <stroke
-        android:width="1dp"
-        android:color="@color/primary"
+        android:width="2dp"
+        android:color="#EF476F"
         android:dashGap="2dp"
         android:dashWidth="2dp" />
-
 </shape>
