--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/myfrag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_light">
+    android:background="@color/light">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
                 android:background="@drawable/text_banner"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/tv_filter_title"
-                android:textColor="@color/primary_text"
+                android:textColor="@color/primary"
                 android:textColorHint="@color/accent"
                 android:textSize="50sp" />
 
@@ -38,7 +38,6 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="50dp"
                 android:orientation="horizontal">
-
 
                 <android.support.v7.widget.CardView
                     android:layout_width="0dp"
@@ -59,7 +58,7 @@
                         android:gravity="center_horizontal|bottom"
                         android:text="@string/topic"
                         android:textAllCaps="false"
-                        android:textColor="@color/primary_dark"
+                        android:textColor="@color/primary"
                         android:textSize="50sp"
                         android:textStyle="italic" />
 
@@ -69,13 +68,13 @@
                         android:layout_height="match_parent"
                         android:layout_marginBottom="50dp"
                         android:contentDescription="@string/btn_topic"
-                        android:padding="1dp" />
+                        android:padding="5dp" />
 
                     <Button
                         android:id="@+id/btn_topic"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@android:color/transparent" />
+                        android:background="?android:selectableItemBackground" />
 
                 </android.support.v7.widget.CardView>
 
@@ -101,7 +100,7 @@
                         android:gravity="center_horizontal|bottom"
                         android:text="@string/author"
                         android:textAllCaps="false"
-                        android:textColor="@color/primary_dark"
+                        android:textColor="@color/primary"
                         android:textSize="50sp"
                         android:textStyle="italic" />
 
@@ -111,14 +110,14 @@
                         android:layout_height="match_parent"
                         android:layout_marginBottom="50dp"
                         android:contentDescription="@string/btn_topic"
-                        android:padding="1dp" />
+                        android:padding="5dp" />
 
                     <Button
                         android:id="@+id/btn_author"
                         style="@style/MyButton"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@android:color/transparent" />
+                        android:background="?android:selectableItemBackground" />
 
                 </android.support.v7.widget.CardView>
 
@@ -143,6 +142,7 @@
                     android:id="@+id/iv_wall"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:alpha="0.5"
                     android:contentDescription="@string/btn_topic" />
 
                 <TextView
@@ -152,7 +152,7 @@
                     android:gravity="center_horizontal|bottom"
                     android:text="@string/btn_quote_wall"
                     android:textAllCaps="false"
-                    android:textColor="@color/primary_dark"
+                    android:textColor="@color/primary"
                     android:textSize="50sp"
                     android:textStyle="italic" />
 
