--- a/app/src/main/res/layout/fragment_author.xml
+++ b/app/src/main/res/layout/fragment_author.xml
@@ -6,7 +6,7 @@
         android:id="@+id/author_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/primary_light"
+        android:background="@color/accent"
         android:scrollbars="vertical" />
 
 </RelativeLayout>
