--- a/app/src/main/res/layout/fragment_quote_wall.xml
+++ b/app/src/main/res/layout/fragment_quote_wall.xml
@@ -13,7 +13,7 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/primary_light"
+            android:background="@color/light"
             android:scrollbars="vertical" />
 
 
