--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#3F51B5</color>
+    <color name="primary">#26547C</color>
+    <color name="light">#FCFCFC</color>
+    <color name="accent">#06D6A0</color>
     <color name="primary_dark">#303F9F</color>
-    <color name="primary_light">#C5CAE9</color>
-    <color name="accent">#607D8B</color>
-    <color name="primary_text">#212121</color>
-    <color name="secondary_text">#727272</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#B6B6B6</color>
-    <color name="light">#00BCD4</color>
+    <color name="col1">#EF476F</color>
+    <color name="col2">#FF5722</color>
+    <color name="col3">#388E3C</color>
+    <color name="col4">#00796B</color>
+    <color name="col5">#2196F3</color>
+    <color name="col6">#D32F2F</color>
+    <color name="col7">#512DA8</color>
+    <color name="col8">#C2185B</color>
+    <color name="col9">#4CAF50</color>
 </resources>
