--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="light">#FCFCFC</color>
     <color name="accent">#06D6A0</color>
     <color name="primary_dark">#303F9F</color>
+    <color name="red">#EF476F</color>
     <color name="col1">#EF476F</color>
     <color name="col2">#FF5722</color>
     <color name="col3">#388E3C</color>
