--- a/app/src/main/res/drawable/dialog_divider.xml
+++ b/app/src/main/res/drawable/dialog_divider.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:endColor="#EF476F"
+        android:endColor="@color/red"
         android:startColor="@color/primary"
         android:type="linear" />
 </shape>
