--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
                 android:layout_marginTop="50dp"
                 android:orientation="horizontal">
 
+
                 <android.support.v7.widget.CardView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -124,6 +125,7 @@
             </LinearLayout>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/cv_wall"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_below="@id/ll_buttons"
@@ -162,10 +164,21 @@
                     style="@style/MyButton"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@android:color/transparent" />
+                    android:background="?android:selectableItemBackground" />
 
             </android.support.v7.widget.CardView>
 
+            <Button
+                android:id="@+id/btn_stop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@id/cv_wall"
+                android:layout_alignRight="@id/cv_wall"
+                android:layout_below="@+id/cv_wall"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
+                android:text="@string/stop_pushing"
+                android:theme="@style/AppTheme.Button" />
 
         </RelativeLayout>
 
