--- a/app/src/main/res/layout/number_picker.xml
+++ b/app/src/main/res/layout/number_picker.xml
@@ -1,34 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/durationPicker"
-    android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@drawable/popup_frame"
     android:focusableInTouchMode="false"
-    android:orientation="vertical">
+    android:padding="10dp">
+
+    <TextView
+        android:id="@+id/banner_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="@string/push_every"
+        android:textColor="@color/accent"
+        android:textSize="25sp" />
 
     <NumberPicker
         android:id="@+id/numberPicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_margin="10dp"
+        android:layout_below="@id/banner_1"
         android:background="@color/primary"
         android:descendantFocusability="blocksDescendants"
         android:solidColor="@color/primary"
         android:theme="@style/NumberPickerTextColorStyle" />
 
+    <TextView
+        android:id="@+id/banner_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/numberPicker"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="@string/hour"
+        android:textColor="@color/accent"
+        android:textSize="25sp" />
+
     <Button
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@id/banner_2"
         android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"
-        android:background="@color/primary"
-        android:padding="10dp"
-        android:text="Start Pushing"
-        android:textColor="@android:color/black"
-        />
+        android:layout_marginTop="10dp"
+        android:text="@string/start_pushing"
+        android:theme="@style/AppTheme.GreenButton" />
 
 </RelativeLayout>
