--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:paddingTop="50dp">
 
             <TextView
-                android:id="@+id/tv_quote"
+                android:id="@+id/tv_quote_banner"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
@@ -33,7 +33,7 @@
                 android:id="@+id/ll_buttons"
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
-                android:layout_below="@id/tv_quote"
+                android:layout_below="@id/tv_quote_banner"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="50dp"
