--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,4 @@
     <color name="col7">#512DA8</color>
     <color name="col8">#C2185B</color>
     <color name="col9">#4CAF50</color>
-</resources>a
+</resources>
