--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -177,6 +177,7 @@
                 android:layout_below="@+id/cv_wall"
                 android:layout_marginEnd="5dp"
                 android:layout_marginRight="5dp"
+                android:enabled="false"
                 android:text="@string/stop_pushing"
                 android:theme="@style/AppTheme.Button" />
 
