--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="accent">#80D8FF</color>
     <color name="primary_dark">#303F9F</color>
     <color name="red">#EF476F</color>
-    <color name="col1">#FFA000</color>
+    <color name="col1">#00C853</color>
     <color name="col2">#FF5722</color>
     <color name="col3">#388E3C</color>
     <color name="col4">#00796B</color>
