--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="50dp">
+            android:paddingTop="30dp">
 
             <TextView
                 android:id="@+id/tv_quote_banner"
@@ -27,7 +27,7 @@
                 android:text="@string/tv_filter_title"
                 android:textColor="@color/primary"
                 android:textColorHint="@color/accent"
-                android:textSize="50sp" />
+                android:textSize="40sp" />
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/ll_buttons"
@@ -36,7 +36,7 @@
                 android:layout_below="@id/tv_quote_banner"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:orientation="horizontal">
 
 
@@ -52,16 +52,17 @@
 
 
                     <TextView
+                        android:id="@+id/tv_main_topic"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="100dp"
                         android:fontFamily="sans-serif-black"
                         android:gravity="center_horizontal|bottom"
+                        android:singleLine="true"
                         android:text="@string/topic"
                         android:textAllCaps="false"
                         android:textColor="@color/primary"
-                        android:textSize="50sp"
-                        android:textStyle="italic" />
+                        android:textSize="40sp" />
 
                     <ImageView
                         android:id="@+id/iv_topic"
@@ -94,16 +95,17 @@
                     app:cardUseCompatPadding="true">
 
                     <TextView
+                        android:id="@+id/tv_main_author"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="100dp"
                         android:fontFamily="sans-serif-black"
                         android:gravity="center_horizontal|bottom"
+                        android:singleLine="true"
                         android:text="@string/author"
                         android:textAllCaps="false"
                         android:textColor="@color/primary"
-                        android:textSize="50sp"
-                        android:textStyle="italic" />
+                        android:textSize="40sp" />
 
                     <ImageView
                         android:id="@+id/iv_author"
@@ -131,7 +133,7 @@
                 android:layout_below="@id/ll_buttons"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:background="@color/accent"
                 android:clickable="true"
                 android:foreground="?android:attr/selectableItemBackground"
@@ -148,15 +150,16 @@
                     android:contentDescription="@string/btn_topic" />
 
                 <TextView
+                    android:id="@+id/tv_main_wall"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fontFamily="sans-serif-black"
                     android:gravity="center_horizontal|bottom"
+                    android:singleLine="true"
                     android:text="@string/btn_quote_wall"
                     android:textAllCaps="false"
                     android:textColor="@color/primary"
-                    android:textSize="50sp"
-                    android:textStyle="italic" />
+                    android:textSize="40sp" />
 
 
                 <Button
@@ -177,7 +180,6 @@
                 android:layout_below="@+id/cv_wall"
                 android:layout_marginEnd="5dp"
                 android:layout_marginRight="5dp"
-                android:enabled="false"
                 android:text="@string/stop_pushing"
                 android:theme="@style/AppTheme.Button" />
 
