--- a/app/src/main/res/layout/fragment_quote_wall.xml
+++ b/app/src/main/res/layout/fragment_quote_wall.xml
@@ -9,14 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/light"
             android:scrollbars="vertical" />
-
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
@@ -25,10 +23,12 @@
             android:layout_alignBottom="@id/recycler_view"
             android:layout_alignEnd="@id/recycler_view"
             android:layout_alignRight="@id/recycler_view"
-            android:layout_margin="16dp"
-            android:src="@drawable/app_icon"
+            android:scaleType="center"
+            android:src="@drawable/ic_action_rocket_white"
             app:backgroundTint="@color/red"
-            app:elevation="10dp" />
+            app:elevation="20dp"
+            app:pressedTranslationZ="10dp"
+            app:useCompatPadding="true" />
 
         <ImageView
             android:id="@+id/animated_rocket"
