--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,7 +31,7 @@
     </style>
 
     <style name="NumberPickerTextColorStyle">
-        <item name="android:textColorPrimary">@color/accent</item>
+        <item name="android:textColorPrimary">@color/red</item>
         <item name="android:textSize">25sp</item>
     </style>
 
